xfce-desktop.yaml
# xfce-desktop.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xfce-desktop
  namespace: xfce-desktop
spec:
  replicas: 1
  strategy:
    type: Recreate  # Terminate old pods before starting new ones
  selector:
    matchLabels:
      app: xfce-desktop
  template:
    metadata:
      labels:
        app: xfce-desktop
      annotations:
        sidecar.istio.io/inject: "true"  # Disable Istio if not needed
    spec:
      #securityContext:  # Add pod-level security context
      #  runAsUser: 1000  # Use a non-root user (adjust to match your image)
      #  runAsGroup: 1000
      # fsGroup: 1000 
      containers:
      - name: xfce
        resources:
          requests:
            memory: "512Mi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        #securityContext:
        #  capabilities:
        #    add: ["SYS_RESOURCE"]  # Allow OOM score adjustments
        #  privileged: false
        # image: kasmweb/ubuntu-xfce:1.14.0  # Tested image
        image: europe-west3-docker.pkg.dev/platform-app-ilx/docker-image-repository/xfce-chromium:latest
        # command: ["/bin/sh", "-c"]
        volumeMounts:
        - name: vnc-password
          mountPath: /etc/vnc-secret
          readOnly: true
        - name: user-data
          mountPath: /home/developer
        ports:
        - containerPort: 5901
      volumes:
      - name: vnc-password
        secret:
          secretName: vnc-secret
      - name: user-data
        persistentVolumeClaim:
          claimName: xfce-pvc
          readOnly: false
