xfce-service.yaml
# xfce-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xfce-vnc
  namespace: desktop
spec:
  selector:
    app: xfce-desktop
  ports:
    - protocol: TCP
      port: 5901
      targetPort: 5901
      nodePort: 30906
  type: NodePort
